@@ -3,6 +3,7 @@ boost1.67 (1.67.0-1) UNRELEASED; urgency=medium
   [ Dimitri John Ledkov ]
   * coroutine2 is no longer excludable library, adjust debian/rules.
   * Cherrypick upstream patch to fix python module_init symbol visibility.
+  * Further fixup boost-mpi-python library tag
 
   [ Giovanni Mascellani ]
   * New upstream release.
